# MITx-6.419x-data-analysis

./: .gitignore  class.ipynb  pyproject.toml
Homework/Module2/: HW2_problems.ipynb  HW2_report.ipynb  report.ipynb
Homework/Module4/: HW4_problems.ipynb
