[project]
name = "mitx-6-419x-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonel481",email = "leonel.aliaga.v@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "networkx (>=3.5,<4.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]

[tool.poetry]
packages = [{include = "mitx_6"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
